Completed user update, search, profile, post crud
