# app/models/auth.model.ts
@@ -7,6 +7,24 @@ export interface IAuth extends Document {
   roles: number[];
 }
 
+export interface AuthUser {
+  _id: string; // This will match auth._id
+  name: string;
+  bio: string;
+  skills: string[];
+  social: {
+    github: string;
+    linkedin: string;
+    twitter: string;
+    website: string;
+  };
+  avatar: string;
+  roles: number[];
+  createdAt: string;
+  updatedAt: string;
+}
+
+
 const AuthSchema: Schema = new Schema(
   {
     username: { type: String, required: true },
